--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -27,9 +27,6 @@
                                 <label for="move3">Move to 3rd Wishlist</label><br>
                              <input type="radio" id="cart" name="cart" value="{{book.item.id}}">
                                 <label for="cart">Move to Cart</label><br>
-<!--                             <form action="#" method="get">-->
-<!--                                <button type="submit" class="btn btn-primary btn-sm" name="addToCart" value="{{ book.item.id }}">Move To Cart</button>-->
-<!--                             </form>-->
                             </td>
                         </tr>
                     {% endfor %}
@@ -45,7 +42,7 @@
     <div align="center">
         <h4>Create a Wishlist</h4>
     </div>
-    <form action="#" method="get">
+    <form action="" method="get">
         <label for="swishlist">Wishlist name:</label>
         <input type="text" id="swishlist" name="createWishlist">
         <input type="submit" value="Create Wishlist">
