--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -66,7 +66,7 @@
     <div align="center" style="color: steelblue">
         <h4>Add A Book To Cart By Book Name</h4>
     </div>
-    <form action="#" method="get">
+    <form action="" method="get">
         <label for="bname">Book name:</label>
         <input type="text" id="bname" name="addToCart" value="{{ book.item.title }}">
         <input type="submit" value="Add To Cart">
