can now add comments for specific book

--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -38,4 +38,11 @@
         <button type="submit" class="btn btn-primary btn-sm" name="addToCart" value="{{ book.id }}">Add To Cart</button>
     </form>
 </div>
+<!-- button for add comment -->
+<br \>
+<div style="background-color:#fff; border:none 1px; float:right; padding:10px;">
+    <form action="" method="get">
+        <button type="submit" class="btn btn-primary btn-sm" name="addComment" value="{{ book.id }}">Add Comment</button>
+    </form>
+</div>
 {% endblock %}
