--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -2,40 +2,57 @@
 
 {% block content %}
 
-<h1> BOOK DETAIL </h1>
+<h1> BOOK DETAILS </h1>
 
 
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">Picture</th>
-        <th scope="col">Name</th>
-        <th scope="col">Author</th>
-        <th scope="col">Author Bio</th>
-        <th scope="col">Description</th>
-        <th scope="col">Genre</th>
-        <th scope="col">Publishing</th>
-        <th scope="col">Rating</th>
-        <th scope="col">Comments</th>
+          <section>
+        <a href = "{{book.cover}}">
+        <img src="{{book.cover}}" height="100px" width="100px" alt="Book cover is not showing">
+         </a>
+    </section>
+    &nbsp;
+        <section>
+            <h1>Title:</h1>
+            <p>{{book.title}}</p>
+        </section>
 
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td><img src="{{book.cover}}" height="100px" width="100px" alt="Book cover is not showing"></td>
+        <section>
+            <h1> Author: </h1>
+            <p> <a href= "{% url 'authorbook' book.author %}"> {{book.author}} </a> </p>
+        </section>
 
-        <td>{{book.title}}</td>
-        <td>{{book.author}}</td>
-        <td>{{book.bio}}</td>
-        <td>{{book.description}}</td>
-        <td>{{book.genre}}</td>
-        <td>{{book.publisher}}</td>
-        <td>{{book.rating}}</td>
-        <td>{{book.comments}}</td>
+        <section>
+            <h1> Bio: </h1>
+            <p>  {{book.bio}} </p>
+        </section>
+
+        <section>
+            <h1> Book Description:  </h1>
+            <p> {{book.description}}</p>
+        </section>
+
+        <section>
+             <h1> Genre: </h1>
+            <p> {{book.genre}} </p>
+        </section>
+
+        <section>
+             <h1> Publishing info : </h1>
+            <p> Publisher:  {{book.publisher}} </p>
+            <p> Release Date:  {{book.release_date}} </p>
+        </section>
+
+    <section>
+         <h1> Rating: </h1>
+          <p> {{book.rating}}</p>
+    </section>
+
+        <section>
+             <h1> Comments: </h1>
+            <p> {{book.comments}} </p>
+        </section>
 
 
-    </tr>
 
-    </tbody>
-</table>
+
 {% endblock %}
