Added feature so that user can rename wishlists and add books to wishlists from the book details page.

--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -38,8 +38,7 @@
         </div>
     </form>
     <br \>
-    <br \>
-    <div align="center">
+    <div align>
         <h4>Create a Wishlist</h4>
     </div>
     <form action="" method="get">
@@ -48,5 +47,38 @@
         <input type="submit" value="Create Wishlist">
     </form>
     <br \>
+    <br \>
+    <br \>
+    <br \>
+    <br \>
+    <br \>
+    <div align>
+        <h4>Rename First Wishlist</h4>
+    </div>
+    <form action="" method="get">
+        <label for="rename1">New Wishlist Name:</label>
+        <input type="text" id="rename1" name="rename1">
+        <input type="submit" value="Rename Wishlist">
+    </form>
+    <br \>
+    <br \>
+    <div align>
+        <h4>Rename Second Wishlist</h4>
+    </div>
+    <form action="" method="get">
+        <label for="rename2">New Wishlist Name:</label>
+        <input type="text" id="rename2" name="rename2">
+        <input type="submit" value="Rename Wishlist">
+    </form>
+    <br \>
+    <br \>
+    <div align>
+        <h4>Rename Third Wishlist</h4>
+    </div>
+    <form action="" method="get">
+        <label for="rename3">New Wishlist name:</label>
+        <input type="text" id="rename3" name="rename3">
+        <input type="submit" value="Rename Wishlist">
+    </form>
     <br \>
 {% endblock %}
