--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -38,4 +38,14 @@
         <button type="submit" class="btn btn-primary btn-sm" name="addToCart" value="{{ book.id }}">Add To Cart</button>
     </form>
 </div>
+
+<br \>
+<br \>
+<form action="" method="get">
+    <tr> <button type="submit" name="addwl1" value="{{ book.id }}">Add To First Wishlist</button> </tr>
+    <tr> <button type="submit" name="addwl2" value="{{ book.id }}">Add To Second Wishlist</button> </tr>
+    <tr> <button type="submit" name="addwl3" value="{{ book.id }}">Add To Third Wishlist</button> </tr>
+</form>
+<br \>
+
 {% endblock %}
