--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -5,18 +5,18 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Register A New Profile</legend>
+                <legend class="border-bottom mb-4">Login</legend>
                 {{ form|crispy}}
             </fieldset>
 
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
         </form>
 
         <div class="border-top pt-3">
             <small class="text-muted">
-                Return User? <a class="ml-2" href="{% url 'login' %}">Log In</a>     
+                Don't Have an account? <a class="ml-2" href="{% url 'register' %}">Sign Up</a>     
             </small>
         </div>
     </div>
