--- a/user/templates/user/shipping/new.html
+++ b/user/templates/user/shipping/new.html
@@ -10,13 +10,12 @@
 <form method="POST">
     {% csrf_token %}
     <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Payment Info</legend>
-        {{ pay_form|crispy}}
-        {{ pay_address_form|crispy}}
+        <legend class="border-bottom mb-4">Shipping Address Info</legend>
+        {{ shipping_address_form|crispy}}
     </fieldset>
 
     <div class="form-group">
-        <button class="btn btn-outline-info" type="submit">Update</button>
+        <button class="btn btn-outline-info" type="submit">Add</button>
     </div>
 </form>
 
