--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -1,35 +1,53 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1> BOOK DETAIL </h1>
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">Picture</th>
-        <th scope="col">Name</th>
-        <th scope="col">Author</th>
-        <th scope="col">Author Bio</th>
-        <th scope="col">Description</th>
-        <th scope="col">Genre</th>
-        <th scope="col">Publishing</th>
-        <th scope="col">Rating</th>
-        <th scope="col">Comments</th>
-    </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td><img src="{{book.cover}}" height="100px" width="100px" alt="Book cover is not showing"></td>
-            <td>{{book.title}}</td>
-            <td>{{book.author}}</td>
-            <td>{{book.bio}}</td>
-            <td>{{book.description}}</td>
-            <td>{{book.genre}}</td>
-            <td>{{book.publisher}}</td>
-            <td>{{book.rating}}</td>
-            <td>{{book.comments}}</td>
-        </tr>
-    </tbody>
-</table>
+<h1> BOOK DETAILS </h1>
+<section>
+<a href = "{{book.cover}}">
+    <img src="{{book.cover}}" height="100px" width="100px" alt="Book cover is not showing">
+</a>
+</section>
+    &nbsp;
+<section>
+    <h1>Title:</h1>
+    <p>{{book.title}}</p>
+</section>
+
+<section>
+    <h1> Author: </h1>
+    <p> <a href= "{% url 'authorbook' book.author %}"> {{book.author}} </a> </p>
+</section>
+
+<section>
+    <h1> Bio: </h1>
+    <p>  {{book.bio}} </p>
+</section>
+
+<section>
+    <h1> Book Description:  </h1>
+    <p> {{book.description}}</p>
+</section>
+
+<section>
+    <h1> Genre: </h1>
+    <p> {{book.genre}} </p>
+</section>
+
+<section>
+    <h1> Publishing info : </h1>
+    <p> Publisher:  {{book.publisher}} </p>
+    <p> Release Date:  {{book.release_date}} </p>
+</section>
+
+<section>
+    <h1> Rating: </h1>
+    <p> {{book.rating}}</p>
+</section>
+
+<section>
+    <h1> Comments: </h1>
+    <p> {{book.comments}} </p>
+</section>
 
 <!-- button for add to cart -->
 <br \>
@@ -39,6 +57,16 @@
     </form>
 </div>
 
+<!-- button for add comment -->
+<br \>
+<br \>
+<div style="background-color:#fff; border:none 1px; float:right; padding:10px;">
+    <form action="" method="get">
+        <button type="submit" class="btn btn-primary btn-sm" name="addComment" value="{{ book.id }}">Add Comment</button>
+    </form>
+</div>
+
+<!-- options for add to wishlist -->
 <br \>
 <br \>
 <form action="" method="get">
