Improve cart feature

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,13 @@
                 <span class="fas fa-home fa-lg"> Home</span>
             </a>
 
-            <!-- TODO: Change href to to a normal user login page -->
-            <!--            <a href="/admin">-->
-            <!--                <button type="button" class="btn btn-primary btn-sm">Login</button>-->
-            <!--            </a>-->
+            <a href="/login" class="btn btn-info btn-sm">
+<!--                <button type="button" class="btn btn-primary btn-sm">Login</button>-->
+                <span class="fas fa-user fa-lg"> Login</span>
+            </a>
 
             <a href="/cart" class="btn btn-info btn-sm">
-                <!--                <i class="fas fa-shopping-cart fa-lg"></i>-->
+<!--                <i class="fas fa-shopping-cart fa-lg"></i>-->
                 <span class="fas fa-shopping-cart fa-lg"> Cart</span>
             </a>
         </div>
