--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
 
-<!-- TODO: user can access his/her cart from any page? (make sure all pages extends base.html) -->
-
 {% block content %}
     <!-- Display shopping cart details -->
     <div align="center" style="color: steelblue">
@@ -60,18 +58,18 @@
     {% endif %}
 
     <!-- add book to cart by book name -->
-    <br \>
-    <br \>
-    <div align="center" style="color: steelblue">
-        <h4>Add A Book To Cart By Book Name</h4>
-    </div>
-    <form action="" method="get">
-        <label for="bname">Book name:</label>
-        <input type="text" id="bname" name="addToCart" value="{{ book.item.title }}">
-        <input type="submit" value="Add To Cart">
-    </form>
-    <br \>
-    <br \>
+<!--    <br \>-->
+<!--    <br \>-->
+<!--    <div align="center" style="color: steelblue">-->
+<!--        <h4>Add A Book To Cart By Book Name</h4>-->
+<!--    </div>-->
+<!--    <form action="" method="get">-->
+<!--        <label for="bname">Book name:</label>-->
+<!--        <input type="text" id="bname" name="addToCart" value="{{ book.item.title }}">-->
+<!--        <input type="submit" value="Add To Cart">-->
+<!--    </form>-->
+<!--    <br \>-->
+<!--    <br \>-->
 
     <!-- separate cart's table and save-for-later table -->
     <br \>
