Reworked models.py, removed extra buttons in book details, removed error pages, changed how rename wishlists textbox works.

--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -70,9 +70,7 @@
 <br \>
 <br \>
 <form action="" method="get">
-    <tr> <button type="submit" name="addwl1" value="{{ book.id }}">Add To First Wishlist</button> </tr>
-    <tr> <button type="submit" name="addwl2" value="{{ book.id }}">Add To Second Wishlist</button> </tr>
-    <tr> <button type="submit" name="addwl3" value="{{ book.id }}">Add To Third Wishlist</button> </tr>
+    <tr> <button type="submit" name="addwl" value="{{ book.id }}">Add To Wishlist</button> </tr>
 </form>
 <br \>
 
