--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,10 @@
 <!--                <i class="fas fa-shopping-cart fa-lg"></i>-->
                 <span class="fas fa-shopping-cart fa-lg"> Cart</span>
             </a>
+
+            <a href="/wishlist" class="btn btn-info btn-sm">
+                <span class="fas fa-heart fa-lg"> Wishlist</span>
+            </a>
         </div>
     </div>
 </head>
