Added back the extra "add to wishlist" buttons for the 2nd and 3rd wishlist instead of just having a default one.

--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -71,7 +71,9 @@
 <br \>
 <div style="background-color:#fff; border:none 1px; float:right; padding:10px;">
     <form action="" method="get">
-        <button type="submit" class="btn btn-primary btn-sm" name="addwl" value="{{ book.id }}">Add To Wishlist</button>
+        <button type="submit" class="btn btn-primary btn-sm" name="addwl1" value="{{ book.id }}">Add To First Wishlist</button>
+        <button type="submit" class="btn btn-primary btn-sm" name="addwl2" value="{{ book.id }}">Add To Second Wishlist</button>
+        <button type="submit" class="btn btn-primary btn-sm" name="addwl3" value="{{ book.id }}">Add To Third Wishlist</button>
     </form>
 </div>
 
