--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,24 @@
                 <span class="fas fa-home fa-lg"> Home</span>
             </a>
 
-            <a href="/login" class="btn btn-info btn-sm">
-<!--                <button type="button" class="btn btn-primary btn-sm">Login</button>-->
-                <span class="fas fa-user fa-lg"> Login</span>
+            <a href="/books" class="btn btn-info btn-sm">
+                <span class="fas fa-book fa-lg"> Books</span>
             </a>
+
+            {% if request.user.is_authenticated %}
+                <a href="/profile" class="btn btn-info btn-sm">
+                    <span class="fas fa-user-edit fa-lg"> Profile</span>
+                </a>
+
+                <a href="/logout" class="btn btn-info btn-sm">
+                    <span class="fas fa-user-slash fa-lg"> Logout</span>
+                </a>
+            {% else %}
+                <a href="/login" class="btn btn-info btn-sm">
+    <!--                <button type="button" class="btn btn-primary btn-sm">Login</button>-->
+                    <span class="fas fa-user fa-lg"> Login</span>
+                </a>
+            {% endif %}
 
             <a href="/cart" class="btn btn-info btn-sm">
 <!--                <i class="fas fa-shopping-cart fa-lg"></i>-->
