--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -1,32 +1,58 @@
 {% extends 'base.html' %}
+{% include 'user/main.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="media">
-        <div class="media-body">
-            <h2 class="account-heading"> {{ user.username}}</h2>
-            <p class="text-secondary">{{ user.email }}</p>
-        </div>
+
+<div class="media">
+    <div class="media-body">
+            <h2 style="padding-left: 10px;"> {{ user.username}}'s Profile</h2>
+            <p style="padding-left:10px;">{{ user.email }}</p>
     </div>
-    <form method="POST">
-        {% csrf_token %}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Profile Info</legend>
-            {{ user_form|crispy}}
-
-            <legend class="border-bottom mb-4">Home Address Info</legend>
-            {{ home_form|crispy}}
-
-        </fieldset>
-
-        <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Update</button>
-        </div>
-    </form>
-    <br>
-    <a href="{% url 'payment_home' %}">View/Edit Payment Options</a><br>
-    <a href="{% url 'shipping_home' %}">View/Edit Shipping Options</a>
+</div>
 
 
+<div style="width: 100%; overflow: hidden;">
+    <div style="width: 1000px; float: left;">
+        <div class = "content-section">
+            <form method="POST">
+            {% csrf_token %}
+                <fieldset class="col-lg-8">
+                    <legend class="border-bottom mb-4">Profile Info</legend>
+                    {{ user_form|crispy}}
+            
+                    <legend class="border-bottom mb-4">Home Address Info</legend>
+                        {{ home_form|crispy}}
+            
+                    </fieldset>
+            
+                    <div class="form-group">
+                        <button class="btn btn-outline-info" type="submit">Update</button>
+                    </div>
+                </form>
+        </div>       
+    
+    </div>
+    <div style="margin-left: 1300px;"> 
+    <div class="col-md-6">
+                <div class="content-section">
+                  <h3>{{user.username}}'s Profile </h3>
+                  <p class='text-muted'>Edit and View Personal Info.
+                    <ul class="list-group">
+                      <li class="list-group-item list-group-item-light"> <a href="{% url 'add_shipping' %}">Add New Shipping Address</a></li>
+                      <li class="list-group-item list-group-item-light"><a href="{% url 'shipping_home' %}">View/Edit Shipping Addresses</a></li>
+                      <li class="list-group-item list-group-item-light"><a href="{% url 'add_payment' %}">Add New Payment Option</a></li>
+                      <li class="list-group-item list-group-item-light"><a href="{% url 'payment_home' %}">View/Edit Payment Options</a></li>
+                    </ul>
+                  </p>
+                </div>
+            </div>
+    </div>
+</div>
 
 
+
+
+
+    
 {% endblock content%}
+   
