--- a/user/templates/user/shipping/edit.html
+++ b/user/templates/user/shipping/edit.html
@@ -1,16 +1,24 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
+
+
+
 <form method="POST">
     {% csrf_token %}
     <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Edit Shipping Info</legend>
-        {{ form|crispy}}
+        <fieldset class="col-lg-8">
+
+            <legend class="border-bottom mb-4">Edit Shipping Info</legend>
+            {{ form|crispy}}
+        </fieldset>
     </fieldset>
+
 
     <div class="form-group">
         <button class="btn btn-outline-info" type="submit">Update</button>
         <a class="btn btn-outline-danger" href="{% url 'shipping_delete' object.id %}">Delete</a>
+        <a class="btn btn-outline-secondary" href="{%url 'shipping_home' %}">Cancel</a>
 
     </div>
 </form>
