--- a/user/templates/user/shipping/home.html
+++ b/user/templates/user/shipping/home.html
@@ -1,18 +1,34 @@
 {% extends 'base.html' %}
 {% block content %}
-    <br>
+
+    <style>
+        th, td {
+            padding: 10px;
+            border: 2px solid #666;
+        }
+    </style>
+
+    <h2>{{profile.user.username}}'s Shipping Addresses</h2>
+
+    <table style="width:92%; margin:80px auto; border-collapse:collapse;">
     {% for shipping_address in shipping_addresses %}
-        <div class="media-body">
-            <div class = "card-info">
-                <br>
-                <h2><a href="{% url 'shipping_edit' shipping_address.id %}">Shipping Address {{forloop.counter}}:</a></h2> 
-                <p>Address Line: {{shipping_address.address_line}} </p>
-                <p>State: {{shipping_address.state}}</p>
-                <p>City: {{shipping_address.city}}</p>
-                <p>Zip Code: {{shipping_address.zip_code}}</p>
-            </div>
-        </div>
+        <tr>
+        <th><h4><a href="{% url 'shipping_edit' shipping_address.id %}">Shipping Address {{forloop.counter}}:</a></h3></th> 
+        <th>State</th>
+        <th>City</th>
+        <th>Zip Code</th>
+        </tr>
+        <tr>
+        <td>{{shipping_address.address_line}} </td>
+        <td>{{shipping_address.state}}</td>
+        <td>{{shipping_address.city}}</td>
+        <td>{{shipping_address.zip_code}}</td>
+        </tr>
+                
     {% endfor%}
-    <br>
-    <a href="{% url 'add_shipping' %}">Add New Shipping Address</a>
+    </table>
+    <a class="btn btn-outline-info" href="{%url 'add_shipping' %}">Add New Shipping Address</a>
+    <a class="btn btn-outline-secondary" href="{%url 'profile' %}">Back To Profile</a>
+
+
 {% endblock content%}
